--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,4 +7,121 @@ html {
 body {
     font-size: 1.6rem;
     font-family: "Sora", serif;
+    background:#10375C;
+}
+/* commom */
+.container {
+    width: calc(100% - 270px);
+    margin-left: auto;
+    margin-right: auto;
+}
+.btn {
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 22px;
+    background: #2E80CE;
+
+}
+a{
+   text-decoration: none; 
+   color: #C9D2DA;
+    font-size: 16px;
+    font-weight: 300;
+}
+/* header */
+.header  {
+    padding: 30px 0 110px;
+    min-height:100vh ;
+}
+.navbar {
+    display: flex;
+}
+.header .head {
+    display: flex;
+}
+.header .head .text {
+    text-align: right;
+    margin-left: 6px;
+}
+.header .head .text--lagre {
+    display: block;
+    color: #FFF;
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+.header .head .text--small {
+    color: #FFF;
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+.header ul  {
+    margin-left: 318px;
+    display: flex;
+}
+.header ul li a {
+    padding: 0 21px 0;
+}
+.header .home {
+    position: relative;
+}
+.header .home::before {
+    position: absolute;
+    display: inline-block;
+    content: "";
+    width: 6px;
+    height: 6px;
+    background: #fff;
+    border-radius: 50%;
+    top: 6px;
+    left:8px;
+    
+}
+.header .action {
+    margin-left: auto;
+}
+.header .action__link {
+    margin-right: 28px;
+}
+.header .action .btn {
+    padding: 8px 20px ;
+}
+.hero {
+    margin-top: 76px;
+    display: flex;
+}
+.hero__title {
+    width: 44%;
+}
+.hero__img {
+    width: 56%;
+}
+.hero__title__sub-title {
+    color: #FFF;
+    font-size: 7rem;
+    font-weight: 600;
+    letter-spacing: -1.4px;
+}
+.hero__title__des {
+    color: #C9D2DA;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.667;
+    margin-right: 49px;
+    margin-top: 22px;
+    margin-bottom: 38px;
+}
+.hero .btn {
+    padding: 15px 46px;
+}
+.hero span {
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 400;
+    line-height:1.66;
+    margin-left: 38px;
+}
+.hero__img {
+    display: flex;
 }
