--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,18 +2,17 @@
     box-sizing: border-box;
 }
 html {
-    font-size: 62.5%;
+    font-size: 70%;
 }
 body {
     font-size: 1.6rem;
     font-family: "Sora", serif;
-    background:#10375C;
+    
 }
 /* commom */
 .container {
-    width: calc(100% - 270px);
-    margin-left: auto;
-    margin-right: auto;
+    max-width: calc(100% - 270px);
+    margin: 0 auto;
 }
 .btn {
     color: #FFF;
@@ -27,13 +26,14 @@ body {
 a{
    text-decoration: none; 
    color: #C9D2DA;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 300;
 }
 /* header */
 .header  {
     padding: 30px 0 110px;
-    min-height:100vh ;
+    min-height:100vh;
+    background:#10375C;
 }
 .navbar {
     display: flex;
@@ -45,7 +45,7 @@ a{
     text-align: right;
     margin-left: 6px;
 }
-.header .head .text--lagre {
+.header .head .text--large {
     display: block;
     color: #FFF;
     font-size: 1.8rem;
@@ -88,14 +88,32 @@ a{
     padding: 8px 20px ;
 }
 .hero {
-    margin-top: 76px;
     display: flex;
+    align-items: center;
+    margin-top: 76px;
 }
 .hero__title {
     width: 44%;
 }
 .hero__img {
     width: 56%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.hero__img--large {
+    width: 33rem;
+    height: 54rem;
+    object-fit: cover;
+    border-radius: 6px;
+    margin-right: -6px;
+    z-index: 1;
+}
+.hero__img--small {
+    width: 21rem;
+    height: 41rem;
+    object-fit: cover;
+    border-radius: 6px;
 }
 .hero__title__sub-title {
     color: #FFF;
@@ -117,11 +135,8 @@ a{
 }
 .hero span {
     color: #FFF;
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: 400;
     line-height:1.66;
     margin-left: 38px;
-}
-.hero__img {
-    display: flex;
 }
