--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
     margin: 0 auto;
 }
 .btn {
+    display: inline-block;
     color: #FFF;
     text-align: center;
     font-size: 16px;
@@ -149,21 +150,27 @@ a{
 }
 .section-heading {
     color: #10375C;
-    text-align: center;
     font-size: 5rem;
     font-weight: 600;
     line-height: 1.2; 
     letter-spacing: -1px;
 }
-.section-des {
+.service__heading {
+    text-align: center;
+}
+.service__des {
     text-align: center;
     margin: 0 auto;
+}
+.section-des {
+    
     max-width: 468px;
     color: #575F66;
     font-size: 1.8rem;
     font-weight: 300;
     line-height: 1.667; 
 }
+.ser
 .services-item__heading{
     display: inline-block;
     color: #10375C;
@@ -237,7 +244,6 @@ a{
 .work__section-des  {
     margin-top: 18px;
     display: inline-block;
-    margin-right: auto;
     /* dùng float :left để đẩy nguyên thẻ p qua bên trái */
     /* còn text-align là chỉ để cho đoạn văn bản */
 }
@@ -283,13 +289,14 @@ a{
 .warranty__row {
     display: flex;
     align-items: center;
+    column-gap: 130px;
+
 }
-.warranty__img-group , .warranty__title {
-    width: 50%;
+.warranty__img-group{
+    width: 48%
 }
 .warranty__img-group {
     position: relative;
-
 }
 .warranty__img1 {
     width: 512px ;
@@ -303,8 +310,106 @@ a{
     height: 370px;
 }
 .warranty__title {
-    margin-left: 130px;
-    display: inline-block;
-    text-align: left;
+    margin-top: 82px;
  }
+ .warranty__des {
+    margin-top: 18px;
+    margin-bottom: 38px;
+ }
+ .warranty__btn {
+    max-width: 205px;
+    display: inline-block;
+    padding: 15px 51px;
+    border-radius: 30px;
+ }
+ /* dentist */
+ .dentist {
+    margin-top: 170px;
+ }
+ .dentist header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+.dentist_heading{
+    color: #10375C;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 600;
+    line-height:1.2;
+    letter-spacing: -1px;
+}
+.dentist_btn {
+    padding: 15px 27px;
+    color: #FFF;
+    margin-top: 38px;
+    margin-bottom: 70px;
+    display: block;
+}
+.dentist_row {
+    display: flex;
+    column-gap: 19px;
+}
+.dentist-item:hover .alo {
+    transform: scale(1.1);
+}
+.dentist_name {
+    color: #10375C;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.75;
+}
+.dentist_des {
+    color: #575F66;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.85;
+}
+.dentist .boc .alo {
+    display: block;
+    max-width: 100%;
+    height: 290px;
+    border-radius: 6px;
+    background: #EAF6FF;
+    overflow: hidden;
+    object-fit: cover;
+}
+.dentist-item .boc {
+    padding-top: 28px;
+    border-radius: 6px;
+    background: #eaf6ff;
+    overflow: hidden;
+}
+
+.dentist .button .row {
+    display: flex;
+    justify-content: center;
+    column-gap: 18px;
+    margin-top: 38px;
+}
+.dentist .row .button-action {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 1px solid #575f66;
+    outline: none;
+    color: #575f66;
+    background: #fff;
+    transition: 0.25s;
+}
+.dentist .row .button-action:hover {
+    color: #fff;
+    border-color: #2e80ce;
+    background: #2e80ce;
+    cursor: pointer;
+}
+.button-action .right {
+    rotate: 180deg;
+}
+
 
